# Rotacion-de-sol-y-luna-en-un-paisaje-con-OpenGL

./: CMakeLists.txt  README.md  main.cpp
grass/: grass.h
grass/assets/shaders/: grass.fs.glsl  grass.gs.glsl  grass.vs.glsl
grass/common/: Shader.cpp  Shader.hpp
models/: Model.h  TextureFragmentShader.glsl  TransformVertexShader.glsl  casa.dds  llama.dds  panda.dds  tiger.dds
models/common/: objloader.cpp  texture.cpp
sphere/src/: Sphere.h  drawSphere.cpp
sphere/src/glad/include/glad/: glad.h
tree/: cube_fshader.glsl  cube_vshader.glsl  framebuffer.h  individual_leaves.h  leaves_individual_fshader.glsl  leaves_individual_vshader.glsl  shader_helper.h  tree.h  trunk.h  trunk_fshader.glsl  trunk_vshader.glsl
tree/_cube/: cube.h
tree/_quad_screen/: quad_screen.h
